kustomization/overlays/prod/grafana-mcp/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-mcp-svc
spec:
  ports:
    - name: web
      port: 8000
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: grafana-mcp
  type: ClusterIP
